Fix gap in hero container.
Added the gap required in the hero container.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
 .top-container {
     background-color: #1f2937;
     padding: 8px;
-    align-content: center;
 }
 /* Header section */
 .header {
@@ -44,11 +43,13 @@ a {
 .hero-container {
     display: flex;
     padding: 100px;
-    justify-content: space-evenly;
+    gap: 120px;
+    justify-content: center;
+
 }
 
 .hero-content {
-    width: 400px;
+    width: 430px;
 }
 
 .hero-content h1 {
